# ntpview

./: README.md  app.py  pyproject.toml
src/: ntpView.ui  ntp_enums.py  ntpview.py
